deployment-healthy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: casestudyapi-service-healthy
  namespace: casestudy
spec:
  type: LoadBalancer
  selector:
    app: casestudyapi-healthy
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
