deployment-healthy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casestudyapi-ingress
  namespace: casestudy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: casestudyapi-service-healthy
            port:
              number: 8000
